--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     height: 100vh;
     align-items: center;
     margin-top: 200px;
+    overflow: hidden;
 }
 
 .container {
@@ -18,6 +19,7 @@ body {
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0 0 15px;
+    margin-bottom: 40vh;
 }
 
 #imagem-empresa {
@@ -42,4 +44,9 @@ input {
     width: 100%;
     height: 34px;
     box-sizing: border-box;
+}
+
+nav {
+    padding: 20px;
+    text-align: center;
 }
